# HKBuild-Template

./: .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE.md  README.md  vcpkg.json
behavior_src/: CMakeLists.txt
behavior_src/character/behaviors/MyPlugin.hkx/: behavior.yaml
behavior_src/character/behaviors/MyPlugin.hkx/clips/: CLIP_MyIdle.yaml
behavior_src/character/behaviors/MyPlugin.hkx/data/: graphdata.yaml
behavior_src/character/behaviors/MyPlugin.hkx/states/: MyRootSM.yaml  ST_MyIdle.yaml
cmake/: CommonLibSSE.cmake  automaticGameFolderOutput.cmake
include/: PCH.h  PluginLogger.h
src/cpp/: Plugin.cpp
